--- a/payload_backend/.env.example
+++ b/payload_backend/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URI=mongodb://127.0.0.1/payload-template-blank
-PAYLOAD_SECRET=YOUR_SECRET_HERE
+DATABASE_URI=mongodb://mongo:27017/modul3
+PAYLOAD_SECRET=93031049289735b14a29b5d0
